# python-vscode

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md
docs/sphinx_example/: conf.py  index.rst
docs/sphinx_example/api/: example_module.rst
src/: README.md  __init__.py  example_module.py
src/package/: __init__.py  module1.py  module2.py
tests/: README.md  __init__.py  test_example.py  test_example_module.py
tests/package/: __init__.py  test_module1.py  test_module2.py
