[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
addopts = "--verbose --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203" # Black and Flake8 conflict on whitespace around slices

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"